--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -17,58 +17,6 @@
     - name: git_clone_my_repositiory
       shell: git clone https://github.com/Skepchest/example.git
       ignore_errors: yes
-
-###
-    - name: build_apache
-      shell: docker build /root/example/docker_apache/
-
-#   - name: Context_interactive
-#     shell: read -p "Enter generated image: "... 
-
-
-#    - name: delete_ubuntu
-#      shell: docker rmi images ubuntu
-#      ignore_errors: yes
-
-
-
-# task of deal script, by fetchet to repository
-# script does have $var and must be work by some experamental of adding users
-# now i have method by we can get name of generating images for containers
-# i hope it will work better than in playbook
-
-    - name: try
-      shell: idw=""
-
-
-    - name: creating_$name_of_created_image_apache
-      shell: idw=$(docker image -q)
-
-    - name: create_apache_container
-      shell: docker create -it -p 80:80 --name web $idw apache2ctl -D FOREGROUND
-
-    - name: start_apache_container
-      shell: docker start web
-
-    - name: build_python
-      shell: docker build /root/example/docker_python/
-
-    - name: delete_ubuntu:latest
-      shell: docker rmi images ubuntu
-      ignore_errors: yes
-
-    - name: creating_$name_of_create_image_python
-      shell: idp=$(docker image -q)
-
-    - name: creating_magic
-      shell: echo $idp >> magic
-     
-    - name: magic_trick
-      shell: sed -i 's/ '$idw' //' magic
-
-    - name: create_python_container
-      shell: docker create -it --name python -p 666:666 bash
-
-    - name: start_python_container
-      shell: docker start python
-###
+    
+    - name: run_script_docker
+      shell: ./docker
